--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -1,7 +1,36 @@
 {
-
-      "welcome": "Ласкаво просимо",
-      "description": "Це опис.",
-      "contact": "Зв'яжіться з нами",
-      "order": "Замовити зараз"
-}
+      "header": {
+        "home": "Головна",
+        "service": "Послуги",
+        "aboutUs": "Про нас",
+        "contact": "Контакти"
+      },
+      "hero": {
+            "text": "Відгуки наших клієнтів. Дізнайтеся, що люди говорять про наші роботи! В цьому розділі ви знайдете реальні відгуки від задоволених клієнтів. Переконайтесь самі, чому нас обирають знову і знову.",
+            "mainText": "Ми пропонуємо не просто продукт, а продукт що продається ",
+            "textItem": "Ми поєднали все найкраще в одному проекті: якість, швидкість, налаштовуваність та комфорт."
+      },
+      "product": {
+            
+        },
+        "miniBoxes": {
+            "firstItem": {
+                "mainText": "Юридична обробка.",
+                "text": "Ми цінуємо креативність, але не забуваємо про об'єктивну реальність. Всі наші бізнес-угоди побудовані так, щоб кожна сторона отримала бажаний результат."
+            },
+            "secondItem": {
+                "mainText": "Гнучкі рішення.",
+                "text": "Ми приймаємо проектні заявки постійно і завжди раді взятися за ваше замовлення. Ми готові працювати в умовах жорстких термінів, якщо ваша ситуація цього вимагає."
+            },
+            "thirdItem": {
+                "mainText": "Персоналізація.",
+                "text": "Індивідуальний підхід до кожного проекту, цільової аудиторії та досягнення цілей проекту. Ми постійно підтримуємо зв'язок з вами протягом всього процесу розробки."
+            }
+        },
+        "contact": {
+            "mainText": "Здається, що ви вже побачили достатньо?",
+            "spanText": "Давайте працювати разом!",
+            "required": "Обов'язкові поля",
+            "text": "????"
+        }
+    }
