--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -6,9 +6,7 @@
     "contact": "Контакти"
   },
   "hero": {
-    "text": "Відгуки наших клієнтів. Дізнайтеся, що люди говорять про наші роботи! В цьому розділі ви знайдете реальні відгуки від задоволених клієнтів. Переконайтесь самі, чому нас обирають знову і знову.",
-    "mainText": "Ми пропонуємо не просто продукт, а продукт що продається ",
-    "textItem": "Ми поєднали все найкраще в одному проекті: якість, швидкість, налаштовуваність та комфорт."
+    "text": "Відгуки наших клієнтів. Дізнайтеся, що люди говорять про наші роботи! В цьому розділі ви знайдете реальні відгуки від задоволених клієнтів. Переконайтесь самі, чому нас обирають знову і знову."
   },
   "product": {
     "developmentFirstArray": {
